[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/icon.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 266.939

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.7294, 28.0853 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32.6185, 32.6815 )

[node name="Enemy" type="Node2D"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, -32 )
__meta__ = {
"_edit_group_": true
}

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_mask = 2147483649
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]
shape = SubResource( 1 )

[node name="lukt_area" type="Area2D" parent="KinematicBody2D"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/lukt_area"]
modulate = Color( 0.0352941, 0.533333, 0.933333, 1 )
shape = SubResource( 2 )

[node name="Health_area" type="Area2D" parent="KinematicBody2D"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Health_area"]
shape = SubResource( 3 )

[node name="icon" type="Sprite" parent="KinematicBody2D"]
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="KinematicBody2D"]
autostart = true
[connection signal="body_entered" from="KinematicBody2D/Area2D" to="KinematicBody2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="KinematicBody2D/Area2D" to="KinematicBody2D" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="KinematicBody2D/lukt_area" to="KinematicBody2D" method="_on_lukt_area_body_entered"]
[connection signal="area_entered" from="KinematicBody2D/Health_area" to="KinematicBody2D" method="_on_Health_area_area_entered"]
[connection signal="timeout" from="KinematicBody2D/Timer" to="KinematicBody2D" method="_on_Timer_timeout"]
